--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md-3">
             <div class="search-container">
-                <input type="text" placeholder="Search.." class="search_text" name="search">
+                <input type="text" placeholder="Search.." [formControl]="search_user" class="search_text" name="search">
                 <button type="submit" class="submit_btn">Submit</button>
             </div>
         </div>
