search feature added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-9">
-            <ul>
-                <li routerLink="/logo" routerLinkActive="active">Logo</li>
-                <li routerLink="/home" routerLinkActive="active">Home</li>
-                <li routerLink="/registration" routerLinkActive="active">Registration</li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <div class="search-container">
-                <input type="text" placeholder="Search.." [formControl]="search_user" class="search_text" name="search">
-                <button type="submit" class="submit_btn">Submit</button>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-md-9">
+      <ul>
+        <li routerLink="/logo" routerLinkActive="active">Logo</li>
+        <li routerLink="/home" routerLinkActive="active">Home</li>
+        <li routerLink="/registration" routerLinkActive="active">Registration</li>
+      </ul>
     </div>
-    <div class="container">
-        <router-outlet></router-outlet>
+    <div class="col-md-3">
+      <div class="search-container">
+        <input type="text" placeholder="Search by name.." [formControl]="search_user" class="search_text" name="search">
+        <!-- <button type="submit" class="submit_btn">Submit</button> -->
+      </div>
     </div>
+  </div>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
