--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,9 @@
     </div>
     <div class="col-md-3">
       <div class="search-container">
-        <input type="text" placeholder="Search by name.." [formControl]="search_user" class="search_text" name="search">
-        <!-- <button type="submit" class="submit_btn">Submit</button> -->
+        <input type="text" placeholder="Search by name and last name......" [formControl]="search_user" class="search_text" name="search">
       </div>
-    </div>
+    </div> 
   </div>
   <div class="container">
     <router-outlet></router-outlet>
